tests/snapshots/run_wpt_conformance__litert_hardSigmoid_float32_positive_4D_tensor_specified_positive_options_beta_default_options_alpha.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "hard_sigmoid.https.any.js",
    "hardSigmoid float32 positive 4D tensor specified positive options.beta default options.alpha",
    "litert",
    "PASS",
)
