tests/snapshots/run_wpt_conformance__litert_hardSigmoid_float32_positive_5D_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "hard_sigmoid.https.any.js",
    "hardSigmoid float32 positive 5D tensor default options",
    "litert",
    "PASS",
)
